--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Dices"
 uuid = "3be7bea4-956c-482b-8fe8-b2cc98518727"
 authors = ["Abel Soares Siqueira <abel.s.siqueira@gmail.com>"]
-version = "0.1.1"
+version = "0.2.0"
 
 [deps]
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
@@ -10,7 +10,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
 Combinatorics = "1"
-julia = "1"
+julia = "1.0, 1.1, 1.2, 1.3, 1.4, 1.5"
 
 [extras]
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
